crates/dq-cli/tests/snapshots/cli_snapshots__console_array_out_of_bounds.snap
---
source: crates/dq-cli/tests/cli_snapshots.rs
assertion_line: 120
expression: stderr
---
path '/users/5' not found (matched up to '/users')
  matched prefix: /users
  pointer: /users/5
