crates/dq-cli/tests/snapshots/cli_snapshots__console_missing_pointer_did_you_mean.snap
---
source: crates/dq-cli/tests/cli_snapshots.rs
assertion_line: 104
expression: stderr
---
path '/server/prot' not found (matched up to '/server')
  matched prefix: /server
  did_you_mean: port
  pointer: /server/prot
