crates/dq-cli/tests/snapshots/cli_snapshots__fmt_sort_keys_yaml_output.snap
---
source: crates/dq-cli/tests/cli_snapshots.rs
expression: stdout
---
a:
  b: 3
  'y': 2
m: 4
z: 1
