crates/dq-cli/tests/snapshots/cli_snapshots__json_path_typo_get.snap
---
source: crates/dq-cli/tests/cli_snapshots.rs
assertion_line: 176
expression: stderr
---
path '/server/prot' not found (matched up to '/server')
  matched prefix: /server
  did_you_mean: port
  pointer: /server/prot
